# GHST

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AUTOMATION_READY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  GHST-Installer-Enhanced.spec  GHST.code-workspace  GHST_DEV_FRAMEWORK.md  GHST_LIVE_STATUS.md  GHST_MANIFESTO.md  GHST_Transcript_2025-09-07.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  LICENSE  MODERN_UI_IMPLEMENTATION.md  PR_SUMMARY.md  QUICKSTART.md  README-force-sync.md  README.md  RELEASE_INSTRUCTIONS.md  REPOSITORY_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md  auto_commit.bat  auto_commit_config.json  auto_commit_daemon.py  automate_mainsail_setup.py  build_beautiful_exe.py  build_beautiful_optimized.py  build_exe.py  build_exe_clean.py  build_release.ps1  build_release_simple.ps1  cleanup_daemon_config.json  codebase_cleanup_daemon.py  consult_local.py  council_automation_pipeline.py  (+47 more)
.github/: COPILOT_COMMENT.md  COPILOT_RULES.md  copilot-instructions.md
GHST Branch NO SLICER/: CHANGELOG.md  CONTRIBUTING.md  ETHICAL_AI_FRAMEWORK.md  IMPLEMENTATION_SUMMARY.md  NIGHTLY_AUTOMATION.md  PLUGIN_DOCUMENTATION.md  README.md  README_SPONSORS.md  SPONSORSHIP_PROPOSAL.md  build_report.md  clockwork_demo.gcode  council_simulation.py  demo.py  demo_nightly_automation.py  demo_plugin_system.py  fantom.py  launch_fantom.py  launch_gui.py  launcher.py  minimal_gui_test.py  pyproject.toml  rename_to_fantom.py  requirements.txt  setup.py  test_admin_ghosts.py  test_cube.gcode  test_fantom.py  test_gui.py  test_phd_ghosts.py  test_plugin_direct.py  test_plugin_functionality.py  test_plugins.py  validate_migration.py  version_info.txt
buildspecs/: android_buildspec.yml  ios_buildspec.yml  linux_buildspec.yml  pi3_buildspec.yml  pi4_buildspec.yml  pizero_buildspec.yml  select_build.py  windows_buildspec.yml  zipfile_buildspec.yml
contained_examples/: ML_log_naming_vote.txt  ML_log_terminal_naming.txt
core/: .autopilot_queue.json  .ghst_transformations.json  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  README_SPONSORS.md  SPONSORSHIP_PROPOSAL.md  UI_MODERNIZATION_SUMMARY.md  launch_gui.py  launcher.py  pyproject.toml  requirements.txt  setup.py  version_info.txt
core/.ghst_backups/backup_20250905_234752/: CHANGELOG.md  CONTRIBUTING.md  launch_gui.py  launcher.py  setup.py
core/.ghst_backups/backup_20250905_234752/docs/: RULESET_QUICK_REFERENCE.md
core/.ghst_backups/backup_20250905_234752/scripts/: ai_safety_check.py  check_license_headers.py  ghost_ethical_review.py  ghst_transform_engine.py  nightly_build.py  nightly_build.sh
core/.ghst_backups/backup_20250905_234752/src/: syntax_supervisors.py
core/.ghst_backups/backup_20250905_234752/src/ai_collaboration/: error_handler.py  expert_classes.py  expert_manager.py  ghost_chat.py
core/.ghst_backups/backup_20250905_234752/src/plugins/: __init__.py  base_plugin.py  plugin_manager.py
core/.ghst_backups/backup_20250905_234752/src/plugins/builtin/: __init__.py  gcode_optimizer.py  print_stats.py
core/.ghst_backups/backup_20250905_234752/src/ui_components/: main.py
core/.ghst_backups/backup_20250905_234752/src/utils/: config_manager.py
core/config/: default.yaml  ghost_config.yaml  llm_config.yaml  pla_basic.yaml  plugin_config.yaml
core/data/: ghst_dataset.db
core/docs/: REPOSITORY_RULESET.md  RULESET_QUICK_REFERENCE.md  UI_MODERNIZATION.md  UI_VISUAL_GUIDE.md
core/ghosts/: base_ghost.py  core_ghost.py  system_ghost.py
core/llm_engine/: context_manager.py  ghost_core.py  memory_system.py  plugin_loader.py
core/scripts/: ai_safety_check.py  check_license_headers.py  ghost_ethical_review.py  nightly_build.py
core/src/: syntax_supervisors.py
core/src/ai_collaboration/: README_THINK_TANK.md  dataset_store.py  env_loader.py  error_handler.py  expert_classes.py  expert_manager.py  expert_metadata.py  ghost_chat.py  ghost_manager.py  gpt_chat.py  grok_adapter.py  local_model.py  model_registry.py  moe_integration.py  moe_orchestrator.py  moe_router.py  phd_think_tank.py  test_moe_system.py  think_tank_gui.py  think_tank_integration.py
core/src/plugins/: __init__.py  base_plugin.py  plugin_manager.py
core/src/plugins/builtin/: __init__.py  code_analyzer.py  gcode_optimizer.py  print_stats.py  project_stats.py
core/src/ui_components/: README.md  animated_button.py  chat_interface.py  code_block_widget.py  code_display.py  documentation_panel.py  gui_terminal.py  loading_animations.py  loading_widget.py  main.py  modern_main_window.py  nicegui_dark_test.py  settings_dialog.py  side_panel.py  speedbuild_slider.py
core/src/ui_components/styles/: __init__.py  animations.py  modern_theme.py  typography.py
core/src/utils/: branch_scanner.py  config_manager.py
core/tests/: test_grok_orchestrator.py
custom_thematic_ghsts/: scrim_ghst.json
docs/: BRANCH_ORGANIZATION.md  EXPERT_SYSTEM.md  EXPERT_TEMPLATE.md  GHST_IMPLEMENTATION_PHASES.md  GROK_API.md  GUI_STANDARDS.md  MODERN_UI_README.md  MOE_ARCHITECTURE.md  MOE_IMPLEMENTATION_SUMMARY.md  MOE_README.md  QUICK_START_UI.md  REPOSITORY_RULESET.md  UI_GUIDE.md  VISUAL_TESTING_GUIDE.md
examples/: moe_demo.py
experts/: README.md
ghst_checkpoints/: 2025-09-05-meta.txt  2025-09-06-auto_fix_log.txt  2025-09-06-auto_yes_log.txt  2025-09-06-council_group_sorting_log.txt  2025-09-06-ghst_council_action_prompt.txt  2025-09-06-ghst_council_motto.txt  2025-09-06-perspective_exchange_log.txt  2025-09-06-slcer_council_brainstorm_log.txt  2025-09-06-yessir_auto_log.txt  GHST_Checkpoint_Log.markdown
prompts/: GHST_Implementation_Prompt.markdown
releases/: build_release.ps1
scripts/: ask_moe.py  auto_moe.py  continue_helper.bat  continue_helper.ps1  council_ui_watcher.py  create_pr.sh  ghst_auto_backup.py  ghst_auto_bruteforce_confirm.py  ghst_auto_confirm_anything.py  ghst_auto_continue.py  ghst_auto_ocr_continue.py  ghst_auto_update.py  ghst_auto_yes.py  ghst_auto_yes_cli.py  ghst_auto_yes_enhanced.py  ghst_auto_yes_imgmatch.py  ghst_auto_yes_ultimate.py  ghst_powershell_auto.ps1  (+7 more)
(+91 files in other folders)
